[package]
name = "allocation_chain"
version = "0.1.0"
edition = "2021"

[dependencies]
rsa = "0.5.0"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
color-eyre = "0.5.11"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand="0.8"
log = "0.4"
base64 = "0.13"
ring = "0.16.20"
